# Midi-ITM

./: .gitignore  CMakeLists.txt  declarations.lsp  groups.lsp  groups.lsp~  lisp_code.lisp  main.cpp  midi-itm.lsp  midi-itmConfig.h.in  output-bindings.lsp  testoutput.lsp
cmake/: FindECL.cmake
graphics/: Config.h  GFX_Api.cpp  GFX_Api.h  Graphics.cpp  Graphics.h  Layer.cpp  Layer.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  api.cpp  gfx.cpp  gfx.h  layer_class.h  main_.cpp  sdl_utils.h
graphics/Helpers/: FlowerScene.h  GLScene.h  ThrowbackScene.h  WindowScene.h
graphics/Scenes/: FlowerScene.cpp  GLScene.cpp  ThrowbackScene.cpp  WindowScene.cpp
head/: main.cpp  midi-itmConfig.h.in
lisp/: colors.lsp  declarations.lsp  groups.lsp  midi-itm.lsp  output-bindings.lsp  refactor-ideas.lsp
